welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: not found: value White
setCouleurBrosse(White)
                 ^