welcome.lessons.welcome.instructions.Instructions.scala.code
setCouleurBrosse(White)
leveBrosse()
recule()
baisseBrosse()
gauche()
avance()
droite()
avance(2)
droite()
avance(2)
droite()
avance(2)
leveBrosse()
droite()
avance()
droite()
avance()